add_subdirectory("bytes_examples")
add_subdirectory("complex_examples")
add_subdirectory("euclidean_spatial_geometry_examples")
add_subdirectory("integer_examples")
add_subdirectory("knots_examples")
add_subdirectory("math_examples")
add_subdirectory("numerical_examples")
add_subdirectory("polynomial_examples")
add_subdirectory("ppm_examples")
add_subdirectory("special_functions_examples")
add_subdirectory("string_examples")
add_subdirectory("svg_examples")
