add_subdirectory("bytes")
add_subdirectory("complex")
add_subdirectory("fft")
add_subdirectory("graph_theory")
add_subdirectory("integer")
add_subdirectory("interpolate")
add_subdirectory("knots")
add_subdirectory("math")
add_subdirectory("numerical")
add_subdirectory("optics")
add_subdirectory("polynomial")
add_subdirectory("ppm")
add_subdirectory("rational")
add_subdirectory("sort")
add_subdirectory("special_functions")
add_subdirectory("spherical_geometry")
add_subdirectory("string")
add_subdirectory("svg")
add_subdirectory("vec2")
add_subdirectory("vec3")
add_subdirectory("vector_integer")
add_subdirectory("vector_real")
add_subdirectory("void_pointer")
add_subdirectory("window_functions")
